# iop-advisor-engine

./: .gitignore  Containerfile  README.md  podman-compose.yml  pyproject.toml  setup.py
.github/workflows/: container-release.yml  tag-release.yml
advisor_engine/: __main__.py  archive_processor.py  config.py  content.py  endpoints.py  foreman.py  insights_core_engine.py  loggers.py
special_playbooks/: diagnosis.yml  postRunCheckIn.yml  reboot.yml
tests/unit/: test_endpoints.py
